--- a/advr_mob_plt_control/config/config.yaml
+++ b/advr_mob_plt_control/config/config.yaml
@@ -1,4 +1,4 @@
-advr_mob_plt:
+advr_mob_plt_controller:
   # Publish all joint states -----------------------------------
   joint_state_controller:
     type: joint_state_controller/JointStateController
